# Serverless-Discord-Bot

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: cd.yml
cloudformation/: dynamodb.yml  ecr.yml  iam.yml
src/commands/: dog.py  ncodice.py
src/common/: defer_command_execution.py  send_to_discord.py  update_slash_command.py
src/lambda_router/: Dockerfile
src/router/: main.py
src/tasks/: daily_ncodice.py  scheduled_keiba_scraper.py
