[tool.poetry]
name = "serverless-discord-bot"
version = "1.0.0"
description = ""
authors = ["saichann <55883274+sai11121209@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
discord-interactions = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
